fix too small height of cards in offer section when using very wide device

--- a/styles/sass/modules/_offer.scss
+++ b/styles/sass/modules/_offer.scss
@@ -65,13 +65,13 @@
       padding-top: 0.5rem;
       padding-bottom: 0rem;
 
-      @media screen and (max-width: 321px) {
-        padding-left: 0;
-      }
-
       @media screen and (max-width: 992px) {
         padding-left: 1rem;
         max-width: 85%;
+      }
+
+      @media screen and (max-width: 321px) {
+        padding-left: 0;
       }
 
       @media screen and (min-width: 2400px) {
@@ -152,11 +152,13 @@
       @media screen and (min-width: 2400px) {
         padding: 2.5rem;
         margin-top: 3rem;
+        height: 40rem;
       }
 
       @media screen and (min-width: 3200px) {
         padding: 5rem;
         margin-top: 6rem;
+        height: 50rem;
       }
 
       * {
